2006-06-12  Dan Winship  <danw@novell.com>

	* plugins/cube.c: 
	* plugins/switcher.c: Mark cube as needing to load before switcher
	rather than marking switcher as requiring cube. bnc #183676.

	* plugins/gconf-dump.c (dumpPluginOptions): Output load_before and
	requires for all plugins, even if the list is empty, to ensure
	that an empty value in a new release overrides a non-empty value
	in an older release.

	* plugins/compiz.schemas.in.in: regen

2006-06-09  Dan Winship  <danw@novell.com>

	* configure.ac: add translations

2006-06-09  David Reveman  <davidr@novell.com>

	* plugins/move.c (moveHandleMotionEvent): Handle shaded windows
	better.

	* src/window.c (maximizeWindow):
	* src/event.c (handleEvent): Allow windows to be both maximized
	and shaded.

	* src/window.c:  Update addWindowSizeChanges so it can be used by
	moveResizeWindow.
	(updateWindowAttributes): Add missing sendSyncRequest call.
	(addWindowSizeChanges): Make maximized window placement a bit better.
	(moveResizeWindow): Adjust window geometry using
	addWindowSizeChanges. (bnc 183121)

	* src/window.c: Only allow shading on windows with top decoration.

	* src/event.c (handleEvent): Check that shade action is allowed
	before shading a window.

2006-06-08  David Reveman  <davidr@novell.com>

	* plugins/decoration.c (decorInitWindow):
	* plugins/minimize.c (minInitWindow):
	* src/window.c (addWindow): Handle initially shaded windows
	correctly.

	* plugins/switcher.c (switchTerminate): Only use hideWindow
	if switcher window is managed and mapped.
	(switchInitiate): Only use showWindow if switcher window is
	hidden. (bnc 182519)

	* plugins/minimize.c (minHandleEvent): Make sure we adjust the window
	region correctly when it's being unshaded.

2006-06-07  David Reveman  <davidr@novell.com>

	* configure.ac: Bump version to 0.0.13.

	* plugins/compiz.schemas.in.in: Regen.

	* src/window.c: Add window shading support.

	* src/screen.c:
	* src/paint.c: